Update text for DE

--- a/src/data/state-text/original/10-DE.md
+++ b/src/data/state-text/original/10-DE.md
@@ -3,7 +3,7 @@ id: 10
 name: Delaware
 ---
 
-As an incentive-heavy state with modest property taxes and no sales tax, Delaware’s tax burdens are competitive for both new and mature firms. Delaware ranks second overall for new firms and third overall for mature firms.
+As a state with modest property taxes and no sales tax, combined with generous incentives for some operations, Delaware imposes tax burdens that are highly competitive for both new and mature firms. Delaware ranks second overall for new firms and third overall for mature firms.
 
 Mature labor- and capital-intensive manufacturers, along with new capital-intensive manufacturers, rank first in their categories, while new labor-intensive manufacturers rank second nationwide. A low property tax that does not include equipment or inventory and the lack of a state sales tax—which significantly reduces the cost of inputs—also contributes to the low tax burden on manufacturers.
 
