Update text on 20 states

--- a/src/data/state-text/original/12-FL.md
+++ b/src/data/state-text/original/12-FL.md
@@ -1,9 +1,9 @@
 ---
-id: 12 
+id: 12
 name: Florida
 ---
 
-Florida features a low corporate income tax and is competitive on many metrics, but several features of its tax code work against corporations, including some of the firms included in our study, including high property taxes and a sales tax base that includes many business-to-business transactions.
+Florida features a low corporate income tax and is competitive on many metrics, but several aspects of its tax code—high property taxes and a sales tax base that includes many business-to-business inputs—work against corporations, including several of our study’s model firms.
 
 Florida’s sourcing rules for service income, which allow the income to be sourced where the benefit of the service is received, favor firms such as shared services centers, which sell many of their services outside the state. The state also ranks well (14th) for mature corporate headquarters with an effective tax rate of 14.0 percent. This firm benefits from the state’s double-weighted sales factor apportionment, though it works to the detriment of many other firms in the study. Also contributing to this comparatively modest tax cost is a low unemployment insurance tax burden.
 
