--- a/src/data/state-text/original/16-ID.md
+++ b/src/data/state-text/original/16-ID.md
@@ -1,9 +1,9 @@
 ---
-id: 16 
+id: 16
 name: Idaho
 ---
 
-Idaho offers both an investment tax credit and a modest nonrefundable new jobs credit, but a moderately high corporate income tax and sourcing rules that expose all in-state income-producing activity to Idaho taxes yields middle-of-the-road tax burdens for most firms, both new and mature.
+Idaho offers both an investment tax credit and a modest nonrefundable new jobs credit, but a moderately high corporate income tax and sourcing rules that expose all in-state income-producing activity to Idaho taxes yield middle-of-the-road tax burdens for most firms, both new and mature.
 
 Mature shared services centers experience the 10th best effective rate in the county, at 18.2 percent. While the state has a throwback rule and sources services to the site of the income-producing activity, a low property tax burden combined with lower-than-average sales taxes and middle-of-the-road unemployment insurance costs serve to bring down the effective tax rate on such facilities.
 
