--- a/src/data/state-text/original/26-MI.md
+++ b/src/data/state-text/original/26-MI.md
@@ -1,9 +1,9 @@
 ---
-id: 26 
+id: 26
 name: Michigan
 ---
 
-Michigan ranks among the states with the highest effective tax rates on new firms due to high property taxes, moderate income taxes, and the lack of incentives for firms other than manufacturers. For instance, the state ranks 50th for new tech centers, which experience the nation’s highest effective property tax rate for that firm type and a total effective rate 72 percent above than the average.
+Michigan ranks among the states with the highest effective tax rates on new firms due to high property taxes, moderate income taxes, and the lack of incentives for firms other than manufacturers. For instance, the state ranks 50th for new technology centers, which experience the nation’s highest effective property tax rate for that firm type and a total effective rate 72 percent above than the average.
 
 The state is slightly more attractive for businesses with long time horizons or wishing to make a substantial investment in the state, but five of the eight mature firms in our study face an above-average tax burden as well. One of the exceptions is the mature data center, which pays a relatively low effective rate of just over half that national average, despite the new data center experiencing an average effective rate.
 
