--- a/src/data/state-text/original/31-NE.md
+++ b/src/data/state-text/original/31-NE.md
@@ -1,5 +1,5 @@
 ---
-id: 31 
+id: 31
 name: Nebraska
 ---
 
@@ -7,6 +7,6 @@ Nebraska has low overall tax burdens for both mature and new firms, which rank 8
 
 Mature data centers benefit from generous property tax abatements and the lowest unemployment insurance taxes for that firm type nationwide, resulting in the lowest total effective rate nationwide for this firm type. New data centers enjoy the second-lowest rate nationwide—just over a fifth of the national median. Many new and mature firms also benefit from the state’s favorable apportionment and sourcing rules.
 
-The state’s tax code deviates sharply from tax neutrality both across firm types and maturity. The mature R&D facility faces an effective tax rate of 10.4 percent, while the new firm experiences negative tax liability of -0.6 percent.
+The state’s tax code deviates sharply from tax neutrality across both firm types and maturity. The mature R&D facility faces an effective tax rate of 10.4 percent, while the new firm experiences negative tax liability of -0.6 percent.
 
 The state’s apportionment system also contributes to Nebraska’s 6th place ranking for mature labor-intensive manufacturing. This operation has an effective tax rate 29 percent below the median even though it has an above-average property tax liability. Conversely, the new capital-intensive manufacturer pays a high total effective tax rate—despite low unemployment insurance taxes and a negative income tax burden—due to high property taxes that extend to business equipment.
