--- a/src/data/state-text/original/32-NV.md
+++ b/src/data/state-text/original/32-NV.md
@@ -1,14 +1,14 @@
 ---
-id: 32 
+id: 32
 name: Nevada
 ---
 
-Nevada’s decision to forgo a corporate income tax is highly beneficial to many of the mature firms in our study, as are generally low property taxes. The state does, however, impose a modest payroll tax and a gross receipts tax, called the Commerce Tax. Rates under the Commerce Tax are generally low but vary by industry. Manufacturers pay some of the lowest rates while data and tech centers pay some of the higher rates.
+Nevada’s decision to forgo a corporate income tax is highly beneficial to many of the mature firms in our study, as are generally low property taxes. The state does, however, impose a modest payroll tax and a gross receipts tax, called the Commerce Tax. Rates under the Commerce Tax are generally low but vary by industry. Manufacturers pay some of the lowest rates while data and tech centers pay higher rates.
 
 Gross receipts are inherently nonneutral and penalize firms with low profit margins or long production chains, though the adverse impact of Nevada’s tax is minimized by its low rates. Burdens under the Commerce Tax are highly uneven, but rarely high.
 
-The absence of a corporate income tax and low property taxes are instrumental in the state’s 8th place ranking for mature distribution centers and 4th place rank for mature corporate headquarters, though these operations are burdened with very high unemployment insurance taxes.
+The absence of a corporate income tax and low property taxes are instrumental in the state’s 9th place ranking for mature distribution centers and 4th place rank for mature corporate headquarters, though these operations are burdened with very high unemployment insurance taxes.
 
 Nevada ranks 38th for the new labor-intensive manufacturing operation and 44th for the new capital-intensive manufacturing operation, hindered chiefly by the fact that manufacturing equipment is subject to sales and property taxes. In addition, Nevada offers no meaningful incentives for new manufacturers.
 
-Mature tech centers enjoy very low gross receipts and property taxes, and while unemployment insurance taxes are the 4th highest nationwide, the total effective rate is 31 percent below the national median. Conversely, a lack of incentives offered by many other states means that the new technology center experiences an above-average effective rate. On the other hand, despite generous incentives valued at $38,187 per job, new data centers pay a rate only 23 percent below the national median.
+Mature tech centers enjoy very low gross receipts and property taxes, and while unemployment insurance taxes are the 4th highest nationwide, the total effective rate is 31 percent below the national median. Conversely, a lack of incentives that are offered by many other states means that the new technology center experiences an above-average effective rate. On the other hand, despite generous incentives valued at $38,187 per job, new data centers pay a rate only 23 percent below the national median.
