--- a/src/data/state-text/original/33-NH.md
+++ b/src/data/state-text/original/33-NH.md
@@ -1,9 +1,9 @@
 ---
-id: 33 
+id: 33
 name: New Hampshire
 ---
 
-New Hampshire forgoes individual income taxes (except on interest and dividend income) and sales taxes but compensates in part with two business taxes: the Business Profits Tax, a high-rate corporate income tax, and the Business Enterprise Tax, which is essentially a value-added tax. The lack of an individual income tax benefits many small businesses but does not aid the C corporations represented in our model firms.
+New Hampshire forgoes individual income taxes (except on interest and dividend income) and sales taxes but compensates in part with two business taxes: the Business Profits Tax—a high-rate corporate income tax—and the Business Enterprise Tax, which is essentially a value-added tax. The lack of an individual income tax benefits many small businesses but does not aid the C corporations represented in our model firms.
 
 The state’s high corporate income tax rate is further exacerbated by a throwback rule and the use of double-weighted sales factor apportionment, and sources service income to the location where the services are performed, not where their benefit is received. (The state is set to shift to single sales factor apportionment in 2022.) These tax provisions yield high tax burdens for most of the mature firms in our study. The new data center faces an effective rate nearly 14 times the national median.
 
