--- a/src/data/state-text/original/35-NM.md
+++ b/src/data/state-text/original/35-NM.md
@@ -1,9 +1,9 @@
 ---
-id: 35 
+id: 35
 name: New Mexico
 ---
 
-New Mexico phased in a reduction in its corporate income tax rate over several years, reducing it from 7.6 percent in 2013 to 5.9 percent by 2018. The state uses three-factor apportionment for most firms, although manufacturers and corporations headquartered in the state can elect to use single sales factor apportionment. There is also a throwback rule, but with an exemption for manufacturers that use single sales factor apportionment. New Mexico uses a market-based sourcing system, which is beneficial to service firms like shared services centers, and both the new and mature model firms of this type pay below-average rates.
+New Mexico phased in a reduction in its corporate income tax rate over several years, reducing it from 7.6 percent in 2013 to 5.9 percent in 2018. The state uses three-factor apportionment for most firms, although manufacturers and corporations headquartered in the state can elect to use single sales factor apportionment. There is also a throwback rule, but with an exemption for manufacturers that use single sales factor apportionment. New Mexico uses a market-based sourcing system, which is beneficial to service firms like shared services centers, and both the new and mature model firms of this type pay below-average rates.
 
 Although equipment is included in the state’s property tax base, overall property tax burdens in New Mexico are generally light. However, manufacturing machinery and research and development (R&D) equipment is also subject to the sales tax, which results in high sales tax burdens for affected firms.
 
