--- a/src/data/state-text/original/37-NC.md
+++ b/src/data/state-text/original/37-NC.md
@@ -5,8 +5,8 @@ name: North Carolina
 
 Over the past decade, North Carolina has implemented historic tax reforms which involved, among other provisions, reductions in the state’s corporate income tax rate and paring back targeted tax incentives. The state now ranks 3rd overall for new firms and 5th for mature firms and boasts the lowest corporate income tax rate in the country at 2.5 percent.
 
-All mature model firms in North Carolina, except the mature data center, experience below-average tax rates. North Carolina ranks 3rd for the mature corporate headquarters with an effective rate of 10.5 percent, based on a very low property tax burden and low income tax burdens. North Carolina’s low property taxes are also enjoyed by the mature technology center, which experiences the 5th lowest total effective rate for its firm type, as well as the mature distribution center, labor-intensive manufacturing operation, and shared services center, which all experience the 4th lowest total effective rates for their firm types.
+All mature model firms in North Carolina except the mature data center experience below-average tax rates. North Carolina ranks 3rd for the mature corporate headquarters with an effective rate of 10.5 percent, based on a very low property tax burden and low income tax burdens. North Carolina’s low property taxes are also enjoyed by the mature technology center, which experiences the 5th lowest total effective rate for its firm type, as well as the mature distribution center, labor-intensive manufacturing operation, and shared services center, which all experience the 4th lowest total effective rates for their firm types.
 
-New firms generally experience below-average effective tax rates as well. The new research and development (R&D) facility, for instance, faces average sales and UI tax rates, and property taxes are notably lower than in most other states. The state has reduced reliance on incentives but still offers a withholding tax rebate that benefits most new firms. New corporate offices enjoy very low income and property taxes, resulting in an effective rate of 7.1 percent, the lowest such rate in the country and 57 percent below the national median.
+New firms generally experience below-average effective tax rates as well. The new research and development (R&D) facility, for instance, faces average sales and unemployment insurance tax rates, and property taxes are notably lower than in most other states. The state has reduced reliance on incentives but still offers a withholding tax rebate that benefits most new firms. New corporate offices enjoy very low income and property taxes, resulting in an effective rate of 7.1 percent, the lowest such rate in the country and 57 percent below the national median.
 
-Of all the firm types, data centers and new capital-intensive manufacturers experience the highest rates in North Carolina relative to other states. The property tax base’s inclusion of machinery equipment and the state’s capital stock tax (the franchise tax), which is uncapped and imposed in addition to the corporate income tax, both contribute to these tax burdens.
+Of all the firm types, data centers and new capital-intensive manufacturers experience the highest rates in North Carolina relative to other states. The property tax base’s inclusion of machinery and equipment and the state’s capital stock tax (the franchise tax), which is uncapped and imposed in addition to the corporate income tax, both contribute to these tax burdens.
