--- a/src/data/state-text/original/41-OR.md
+++ b/src/data/state-text/original/41-OR.md
@@ -1,9 +1,9 @@
 ---
-id: 41 
+id: 41
 name: Oregon
 ---
 
-Oregon’s high corporate income tax rate along with its throwback rule yields above-average overall tax burdens for many firms in our study despite the state forgoing a sales tax. Oregon is also one of only two states, with Delaware, to impose a gross receipts tax in addition to the corporate income tax.
+Oregon’s high corporate income tax rate along with its throwback rule yields above-average overall tax burdens for many firms in our study despite the state forgoing a sales tax. Oregon is also one of only two states, along with Delaware, to impose a gross receipts tax in addition to the corporate income tax.
 
 Nonetheless, services firms like the shared services center benefit from favorable sourcing rules, enjoying below-average effective tax rates. The low income tax burden for this operation, combined with the lack of a sales tax, means that the mature firm experiences one of the lowest overall tax burdens for its firm type with an effective tax rate of 17.5 percent.
 
