--- a/src/data/state-text/original/44-RI.md
+++ b/src/data/state-text/original/44-RI.md
@@ -1,11 +1,11 @@
 ---
-id: 44 
+id: 44
 name: Rhode Island
 ---
 
 Rhode Island imposes some of the highest total effective tax rates in the country regardless of industry or maturity, ranking 48th for new firms and 45th for mature firms. These poor rankings are driven in large part by a combination of a throwback rule and high property tax rates on a tax base that extends to business equipment. Despite single sales factor apportionment, which benefits many firms in our study, 15 of the 16 model firm iterations experience above-average total effective tax rates.
 
-Twelve of the 16 model firms experience above-average income tax burdens. Among new firms, only the capital- and labor-intensive manufacturing firms receive higher-than-average incentives, and the new labor-intensive firm is still weighed down by above-average income, property, and total effective tax rates. The new capital-intensive manufacturer, which is Rhode Island’s most competitive firm, ranks 17th overall due to property tax abatements more than 5.5 times the average property tax abatement available to that firm type nationwide.
+Twelve of the 16 model firms experience above-average income tax burdens. Among new firms, only the capital- and labor-intensive manufacturing firms receive higher-than-average incentives, and the new labor-intensive firm is still weighed down by above-average income, property, and total effective tax rates. The new capital-intensive manufacturer, which is Rhode Island’s most competitive firm, ranks 17th overall due to property tax abatements more than 5.5 times the average available to that firm type nationwide.
 
 Rhode Island’s least-competitive firm, the new research and development (R&D) firm, has the highest total effective tax rate in the country for its firm type. While the state’s sales tax is relatively competitive for most firms and does not apply to R&D equipment, the application of the state’s high property taxes to equipment results in this firm experiencing an effective property tax rate almost twice the national median. High property taxes also burden data centers, further exacerbated by the application of the sales tax to data center equipment.
 
