--- a/src/data/state-text/original/48-TX.md
+++ b/src/data/state-text/original/48-TX.md
@@ -1,5 +1,5 @@
 ---
-id: 48 
+id: 48
 name: Texas
 ---
 
@@ -9,4 +9,4 @@ While Texas sources service income to the location of the income-producing activ
 
 Texas includes equipment and inventory in its property tax base in addition to land and buildings, driving up the costs for most firms in our study, but particularly the manufacturing, distribution, and research and development (R&D) operations. It is one of only nine states to tax all inventory. Property tax rates are also high, reflecting the state’s above-average reliance on location taxation.
 
-Low taxes in other areas yield moderate overall rates for mature capital- and labor-intensive manufacturing operations, despite high property tax burdens. However, the new R&D, technology center, and manufacturing operations experience some of the highest tax burdens for firms of their type in the nation, driven by high property and sales taxes and only modest incentives.
+Low taxes in other areas yield moderate overall rates for mature capital- and labor-intensive manufacturing operations, despite high property tax burdens. However, the new R&D, technology center, and manufacturing operations experience some of the highest tax burdens for firms of their types in the nation, driven by high property and sales taxes and only modest incentives.
