--- a/src/data/state-text/original/50-VT.md
+++ b/src/data/state-text/original/50-VT.md
@@ -1,11 +1,12 @@
 ---
-id: 50 
+id: 50
+
 name: Vermont
 ---
 
-Vermont combines a high corporate income tax with three-factor double-weighted sales factor apportionment and a throwback rule, although sourcing rules only capture only services that are received in Vermont. The result is above-average tax burdens for most Tier 2 firms in our study, while Tier 1 firms see effective rates close to average.
+Vermont combines a high corporate income tax with three-factor double-weighted sales factor apportionment and a throwback rule, although sourcing rules capture only services that are received in Vermont. The result is above-average tax burdens for most Tier 2 firms in our study, while Tier 1 firms see effective rates close to average.
 
-Vermont ranks 47th for new and 49th for mature capital-intensive manufacturing operations, due in large part to the state’s high 8.5 percent statutory corporate income tax rate, which saddles the mature firm with one of the highest income tax burdens in the nation for its firm type. Notably, the property tax base includes equipment, an inclusion which affects firms like technology and the data center, as well as manufacturers.
+Vermont ranks 47th for new and 49th for mature capital-intensive manufacturing operations, due in large part to the state’s high 8.5 percent statutory corporate income tax rate, which saddles the mature firm with one of the highest income tax burdens in the nation for its firm type. Notably, the property tax base includes equipment, an inclusion which affects firms like the technology and data centers, as well as manufacturers.
 
 Vermont offers relatively few incentives but does provide generous withholding tax rebates for new firms. These incentives do not compensate for the other uncompetitive elements of the tax code, however, resulting in an overall ranking of 41st for new firms.
 
