--- a/src/data/state-text/original/56-WY.md
+++ b/src/data/state-text/original/56-WY.md
@@ -1,5 +1,5 @@
 ---
-id: 56 
+id: 56
 name: Wyoming
 ---
 
@@ -9,4 +9,4 @@ Wyoming’s property tax is generally low but does apply to equipment as well as
 
 The new capital-intensive manufacturing firm experiences roughly average tax burdens for its type due to high unemployment insurance taxes and the capital stock tax (the franchise tax). Wyoming is one of 15 states to levy a capital stock tax, which is imposed on businesses regardless of profit, though Wyoming’s features the nation’s lowest rate. The firm also sees below-average property tax burdens despite the state’s lack of incentives. Manufacturing machinery is exempt from the sales tax.
 
-The mature research and development (R&D) facility has the lowest property tax burdens in the nation for its firm type, and its overall effective tax rate is just over half the median rate for that firm type nationwide. However, R&D equipment is subject to the sales tax in Wyoming, and new R&D operations receive no incentives, contributing to the rank of 18th for new facilities.
+The mature research and development (R&D) facility has the lowest property tax burden in the nation for its firm type, and its overall effective tax rate is just over half the median rate for that firm type nationwide. However, R&D equipment is subject to the sales tax in Wyoming, and new R&D operations receive no incentives, contributing to the rank of 18th for new facilities.
