--- a/src/data/state-text/original/42-PA.md
+++ b/src/data/state-text/original/42-PA.md
@@ -1,11 +1,11 @@
 ---
-id: 42 
+id: 42
 name: Pennsylvania
 ---
 
-Pennsylvania has the second highest corporate income tax rate in the country, with a flat 9.99 percent rate. Due to single sales factor apportionment, benefits sourcing, and the lack of a throwback rule, however, the income tax burden is actually lower than average for seven of the eight mature firms in our study.
+Pennsylvania has the second highest corporate income tax rate in the country with a flat 9.99 percent rate. Due to single sales factor apportionment, benefits sourcing, and the lack of a throwback rule, however, the income tax burden is actually lower than average for seven of the eight mature firms in our study.
 
-Both the new and mature corporate headquarters, however, experience the highest income tax burden for firms of their type in the nation, due to the state’s high 9.99 percent tax on all corporate income. The effective income tax rate on the mature corporate headquarters is nearly three times the national median. The corporate headquarters and technology operations are also subject to locally-imposed gross receipts taxes, called business privilege and mercantile taxes.
+Both the new and mature corporate headquarters, however, experience the highest income tax burdens in the nation for firms of their type due to the state’s high 9.99 percent tax on all corporate income. The effective income tax rate on the mature corporate headquarters is nearly three times the national median. The corporate headquarters and technology operations are also subject to locally-imposed gross receipts taxes, called business privilege and mercantile taxes.
 
 The mature capital-intensive manufacturing operation, by contrast, ranks 5th in the nation with a total effective rate of 6.6 percent due to the state’s single sales factor apportionment and the lack of a throwback rule. This firm type also enjoys a low effective property tax rate 33 percent below the national median. Meanwhile, high tax rates for the new distribution center and new shared services center are substantially driven by high property tax burdens, some of the highest in the country for their firm types. The incredibly high 55.1 percent total effective rate on new distribution centers is 70 percent above the median.
 
